sample/kube/bookinfo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookinfo-gateway
  annotations:
    kubernetes.io/ingress.class: "istio"
  labels:
    app: productpage
    service: productpage
spec:
  rules:    
  - host: bookinfo.apps.cluster-ef73.ef73.example.opentlc.com
    http:
      paths:
      - path: /productpage
        pathType: Prefix
        backend:
          service:
            name: productpage
            port:
              number: 9080
      - path: /login
        pathType: Prefix
        backend:
          service:
            name: productpage
            port:
              number: 9080
      - path: /logout
        pathType: Prefix
        backend:
          service:
            name: productpage
            port:
              number: 9080
      - path: /static
        pathType: Prefix
        backend:
          service:
            name: productpage
            port:
              number: 9080
      - path: /api/v1/products.*
        pathType: Prefix
        backend:
          service:
            name: productpage
            port:
              number: 9080
